vlib/v/parser/tests/type_decl_name_err.vv
type A = int | string

fn main() {
	a := A(11)
	println(a)
}
